--- a/community/templates/community/list.html
+++ b/community/templates/community/list.html
@@ -1,10 +1,21 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}
 {% endblock %}
 
 {% block content %}
 
 <div class="container">
+    <header class="py-5 bg-light border-bottom mb-4">
+        <div class="container">
+            
+            <div class="text-center my-5">
+                <h1 class="fw-bolder">PO-FO </h1>
+                <p class="lead mb-0"> Portfolio sharing community </p>
+            </div>
+        </div>
+    </header>
+
     <div class="row">
         <!-- Blog entries-->
         <div class="col-lg-8">
@@ -23,9 +34,16 @@
                         </div>
                     </div>
                     {% endfor %}
-                    
+                    <div class="card mb-4">
+                        <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                        <div class="card-body">
+                            <div class="small text-muted">January 1, 2021</div>
+                            <h2 class="card-title h4">Post Title</h2>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
+                            <a class="btn btn-primary" href="#!">Read more →</a>
+                        </div>
+                    </div>
                 </div>
-                
             </div>
             <!-- Pagination-->
             <nav aria-label="Pagination">
@@ -78,7 +96,7 @@
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
-<script src="js/scripts.js"></script>
+<script src="{% static 'js/scripts.js' %"></script>
 
 {% endblock %}
 
