detail페이지 수정

--- a/community/templates/community/detail.html
+++ b/community/templates/community/detail.html
@@ -12,7 +12,7 @@
                     <!-- Post header-->
                     <header class="mb-4">
                         <!-- Post title-->
-                        <h1 class="fw-bolder mb-1">{{post.header_coment}}</h1>
+                        <h1 class="fw-bolder mb-1">{{post.title}}</h1>
                         <!-- Post meta content-->
                         <div class="text-muted fst-italic mb-2">{{post.createData}}</div>
                         <!-- Post categories-->
@@ -22,7 +22,7 @@
                     <figure class="mb-4"><img class="img-fluid rounded" src="https://dummyimage.com/900x400/ced4da/6c757d.jpg" alt="..." /></figure>
                     <!-- Post content-->
                     <section class="mb-5">
-                        <p class="fs-5 mb-4">{{post.comment}}</p>
+                        <p class="fs-5 mb-4">{{post.coment}}</p>
                     </section>
                 </article>
             </div>
