--- a/community/templates/community/list.html
+++ b/community/templates/community/list.html
@@ -23,6 +23,9 @@
             <div class="row">
                 <div class="col-lg-6">
                     <!-- Blog post-->
+                    <div class="alert alert-info" role="alert">
+                        {% if current_category %}{{current_category.name}}{% else %}All Post{% endif %}
+                      </div>
                     {% for post in posts %}
                     <div class="card mb-4">
                         <a href="#!"><img class="card-img-top" src="{{potho.image.url}}" alt="Post Image" /></a>
@@ -68,9 +71,9 @@
                 <div class="card-body">
                     <div class="row">
                         <ul class="list-group">
-                            <a class="list-group-item {% if not current_category %} active {% endif %}">All</a>
+                            <a href = "/" class="list-group-item {% if not current_category %} active {% endif %}">All</a>
                             {% for c in categories %}
-                                <a href="{{c.get_absolute_url}}" class = "list-group-item {% if not current_category.slug == c.slug %} active {% endif %}">{{ c.name }}</a>
+                                <a href="{{c.get_absolute_url}}" class = "list-group-item {% if current_category.slug == c.slug %} active {% endif %}">{{ c.name }}</a>
                             {% endfor %}
                         </ul>
                     </div>
