--- a/community/templates/community/list.html
+++ b/community/templates/community/list.html
@@ -28,7 +28,9 @@
                       </div>
                     {% for post in posts %}
                     <div class="card mb-4">
-                        <a href="#!"><img class="card-img-top" src="{{potho.image.url}}" alt="Post Image" /></a>
+                        {% for photo in post.photo_set.all|slice:"1" %}
+                        <img src= "{{ photo.image.url }}" class="img-fluid"/>
+                        {% endfor %}
                         <div class="card-body">
                             <div class="small text-muted">{{ post.createData }}</div>
                             <h2 class="card-title h4">{{ post.title }}</h2>
@@ -90,7 +92,7 @@
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
-<script src="{% static 'js/scripts.js' %"></script>
+<script src="{% static 'js/scripts.js' %}"></script>
 
 {% endblock %}
 
