--- a/community/templates/community/detail.html
+++ b/community/templates/community/detail.html
@@ -1,12 +1,23 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %} Post Detail {% endblock %}
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+<!-- Vendor CSS Files -->
+<link href="{% static 'vendor/aos/aos.css' %}" rel="stylesheet">
+<link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+<link href="{% static 'vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
+<link href="{% static 'vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
+
+<!-- Template Main CSS File -->
+<link href="{% static 'static/css/style.css' %}" rel="stylesheet">
 
 {% block content %}
      <!-- Page content-->
-     <div class="container mt-5">
+     <div class="container mt-2">
         <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-12">
                 <!-- Post content-->
                 <article>
                     <!-- Post header-->
@@ -20,7 +31,7 @@
                     </header>
                     <!-- Preview image figure-->
                     {% for photo in post.photo_set.all %}
-                    <figure class="mb-4"><img class="img-fluid rounded" src="{{photo.image.url}}" alt="..." width = '500'/></figure>
+                    <figure class="mb-4"><img class="img-fluid rounded" src="{{photo.image.url}}" alt="..." width = '2000'/></figure>
                     {% endfor %}
                     <!-- Post content-->
                     <section class="mb-5">
