--- a/community/templates/community/list.html
+++ b/community/templates/community/list.html
@@ -3,97 +3,74 @@
 {% block title %}
 {% endblock %}
 
-{% block content %}
-
-<div class="container">
-    <header class="py-5 bg-light border-bottom mb-4">
-        <div class="container">
-            
-            <div class="text-center my-5">
-                <h1 class="fw-bolder">PO-FO </h1>
-                <p class="lead mb-0"> Portfolio sharing community </p>
-            </div>
-        </div>
-    </header>
-
-    <div class="row">
-        <!-- Blog entries-->
-        <div class="col-lg-8">
-            <!-- Nested row for non-featured blog posts-->
-            <div class="row">
-                <div class="col-lg-6">
-                    <!-- Blog post-->
-                    <div class="alert alert-info" role="alert">
-                        {% if current_category %}{{current_category.name}}{% else %}All Post{% endif %}
-                      </div>
-                    {% for post in posts %}
-                    <div class="card mb-4">
-                        {% for photo in post.photo_set.all|slice:"1" %}
-                        <img src= "{{ photo.image.url }}" class="img-fluid"/>
-                        {% endfor %}
-                        <div class="card-body">
-                            <div class="small text-muted">{{ post.createData }}</div>
-                            <h2 class="card-title h4">{{ post.title }}</h2>
-                            <p class="card-text">{{ post.header_coment }}</p>
-                            <a class="btn btn-primary" href="{{post.get_absolute_url}}">Read more →</a>
-                        </div>
-                    </div>
-                    {% endfor %}
-                </div>
-            </div>
-            <!-- Pagination-->
-            <nav aria-label="Pagination">
-                <hr class="my-0" />
-                <ul class="pagination justify-content-center my-4">
-                    <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
-                    <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#!">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#!">3</a></li>
-                    <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
-                    <li class="page-item"><a class="page-link" href="#!">15</a></li>
-                    <li class="page-item"><a class="page-link" href="#!">Older</a></li>
-                </ul>
-            </nav>
-        </div>
-        <!-- Side widgets-->
-        <div class="col-lg-4">
-            <!-- Search widget-->
-            <div class="card mb-4">
-                <div class="card-header">Search</div>
-                <div class="card-body">
-                    <div class="input-group">
-                        <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
-                        <button class="btn btn-primary" id="button-search" type="button">Go!</button>
-                    </div>
-                </div>
-            </div>
-            <!-- Categories widget-->
-            <div class="card mb-4">
-                <div class="card-header">Categories</div>
-                <div class="card-body">
-                    <div class="row">
-                        <ul class="list-group">
-                            <a href = "/" class="list-group-item {% if not current_category %} active {% endif %}">All</a>
-                            {% for c in categories %}
-                                <a href="{{c.get_absolute_url}}" class = "list-group-item {% if current_category.slug == c.slug %} active {% endif %}">{{ c.name }}</a>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            
-        </div>
-    </div>
-</div>
-<!-- Footer-->
-<footer class="py-5 bg-dark">
-    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
-</footer>
-<!-- Bootstrap core JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Core theme JS-->
-<script src="{% static 'js/scripts.js' %}"></script>
-
+{% block script %}
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 {% endblock %}
 
+{% block style %}
+<!-- Vendor CSS Files -->
+<link href="{% static 'vendor/aos/aos.css' %}" rel="stylesheet">
+<link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+<link href="{% static 'vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
+<link href="{% static 'vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
 
+<!-- Template Main CSS File -->
+<link href="{% static 'css/style.css' %}" rel="stylesheet">
+{% endblock %}
+
+{% block content %}
+
+
+
+
+
+<main id="main">
+
+    <!-- ======= Works Section ======= -->
+    <section class="section site-portfolio">
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
+            <h2>PO-FO</h2>
+            <p class="mb-0"> Portfolio sharing community </p>
+          </div>
+          <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
+            <div id="filters" class="filters">
+              <a href="#" data-filter="*" class="active">All</a>
+              {% for c in categories %}
+              <a href="#" data-filter=".{{c.name}}">{{c.name}}</a>
+              {% endfor %}
+            </div>
+          </div>
+        </div>
+        <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
+            {% for post in posts %}
+            <div class="item {{post.category.name}} col-sm-6 col-md-4 col-lg-4 mb-4">
+                <a href="{{post.get_absolute_url}}" class="item-wrap fancybox">
+                <div class="work-info">
+                    <h3>{{post.title}}</h3>
+                    <span>{{post.category.name}}</span>
+                </div>
+                {% for photo in post.photo_set.all|slice:"1" %}
+                <img class="img-fluid" src="{{ photo.image.url }}">
+                {% endfor %}
+                </a>
+            </div>
+            {% endfor %}
+          
+        </div>
+      </div>
+    </section><!-- End  Works Section -->
+
+<!-- Vendor JS Files -->
+<script src="{% static 'vendor/aos/aos.js' %}"></script>
+<script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
+<script src="{% static 'vendor/php-email-form/validate.js' %}"></script>
+<script src="{% static 'vendor/swiper/swiper-bundle.min.js' %}"></script>
+
+<!-- Template Main JS File -->
+<script src="{% static 'js/main.js' %}"></script>
+
+{% endblock %}
