--- a/community/templates/community/list.html
+++ b/community/templates/community/list.html
@@ -49,7 +49,8 @@
             <div class="item {{post.category.name}} col-sm-6 col-md-4 col-lg-4 mb-4">
                 <a href="{{post.get_absolute_url}}" class="item-wrap fancybox">
                 <div class="work-info">
-                    <h3>{{post.title}}</h3>
+                    <h6>{{post.author.username}}</h6>
+                    <h2>{{post.title}}</h2>
                     <span>{{post.category.name}}</span>
                 </div>
                 {% for photo in post.photo_set.all|slice:"1" %}
@@ -58,7 +59,7 @@
                 </a>
             </div>
             {% endfor %}
-          
+           
         </div>
       </div>
     </section><!-- End  Works Section -->
