--- a/templates/base.html
+++ b/templates/base.html
@@ -19,19 +19,28 @@
 
         <!-- Template Main CSS File -->
         <link href="{% static 'css/style.css' %}" rel="stylesheet">
+
+        <!-- Our project just needs Font Awesome Solid + Brands -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">  
     </head>
     <body>
+        
         <!-- Responsive navbar-->
         <nav class="navbar navbar-light custom-navbar">
             <div class="container">
               <a class="navbar-brand" href="/">SHARE POFO.</a>
+              <a href="{% url 'community:post_upload' %}">
+                <i class="fas fa-plus fa-2x" style='color:darkgray'></i>
+                <span></span></a>
             </div>
         </nav>
-        <div class="container">
-            {% block content %}
-            {% endblock %}
-        </div> 
-
+        
+        {% block content %}
+        {% endblock %}
+        
+        <!--
+       
+        -->
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
