--- a/community/templates/community/update.html
+++ b/community/templates/community/update.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-- Upate
+- Update
 {% endblock %}
 
 {% block content %}
@@ -8,11 +8,44 @@
     <div class="col-md-2"></div>
     <div class="col-md-8 panel panel-default">
         <form action="" method="post" enctype="multipart/form-data">
-            {{form.as_p}}
-            {% csrf_token %}
-            <input type="submit" class="btn btn-primary" value="Update">
+            <table class="table table-striped table-bordered">
+                {% csrf_token %}
+                <tr>
+                    <th>제목</th>                                    
+                    <td><input type="textarea" class="form-control" name="title" ></td>
+                </tr>
+                <tr>
+                    <th>글소개</th>                                     
+                    <td><input type="textarea" class="form-control" name="header_coment" ></td>
+                </tr>
+                <tr>
+                    <th>내용</th>                                     
+                    <td><textarea rows="10" class="form-control" name="coment"></textarea></td>
+                </tr>
+                <tr>
+                    <th>카테고리</th> 
+                    <td>                                   
+                        <select name='category' class="form-select form-select-sm" aria-label=".form-select-sm example" size=1>
+                            {% for c in categories %}
+                                <option value={{c.id}}>{{c.name}}</option>   
+                            {% endfor %}
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <th>이미지</th>                                     
+                    <td><input type="file" accept=".gif, .jpg, .png" name="images" multiple></td>
+                </tr>
+            </table>    
+            <div style='width:80px;float: right;'></div>
+            <td><input type="submit" class="btn btn-secondary"  value="글쓰기"></td>
+            </div>
+            
+            
         </form>
     </div>
     <div class="col-md-2"></div>
 </div>
+
+
 {% endblock %}
