--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,23 +1,17 @@
 {% extends 'base.html' %}
-{% block title %}
-- Delete
-{% endblock %}
-
+{% load static %}
+{% block title %} Login {% endblock %}
 {% block content %}
 <div class="row">
     <div class="col-md-2"></div>
     <div class="col-md-8 panel panel-default">
-        <div class="alert alert-info">
-            "{{object}}" 를 삭제 하시겠습니까?
-        </div>
+        <div class="alert alert-info">Please enter your login informations.</div>
         <form action="" method="post">
             {{form.as_p}}
             {% csrf_token %}
-            <input type="submit" class="btn btn-primary" value="삭제">
+            <input class="btn btn-primary" type="submit" value="Login">
         </form>
     </div>
     <div class="col-md-2"></div>
 </div>
-
-
 {% endblock %}
