--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
         <title>POFO</title>
         <meta content="" name="description">
         <meta content="" name="keywords">
-
+        
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -25,14 +25,29 @@
     </head>
     <body>
         
+            
+            
+        
         <!-- Responsive navbar-->
         <nav class="navbar navbar-light custom-navbar">
+        
             <div class="container">
               <a class="navbar-brand" href="/">SHARE POFO.</a>
-              <a href="{% url 'community:post_upload' %}">
-                <i class="fas fa-plus fa-2x" style='color:darkgray'></i>
-                <span></span></a>
+              <a href="{% url 'community:post_upload' %}"><i class="fas fa-plus fa-2x" style='color:darkgray'></i></a>
+                <div align="right">
+                    {% if user.is_authenticated %}
+                        <a href="#">{{ user.get_username }}</a>
+                        <a class="btn btn-default" href="{% url 'logout' %}" role="button">Logout</a>
+                        
+                    {% else %}
+                        <a class="btn btn-default" href="{% url 'login' %}" role="button">Login</a>
+                        
+                    {% endif %}
+                </div>
             </div>
+            
+            
+                           
         </nav>
         
         {% block content %}
