--- a/accounts/templates/registration/logout.html
+++ b/accounts/templates/registration/logout.html
@@ -6,8 +6,8 @@
 <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8 panel panel-default">
-            <div class="alert alert-info">You have been successfully logged out.</div>
-            <a class="btn btn-primary" href="{% url 'login' %}">Click to Login</a>
+            <div class="alert alert-info">로그아웃 되셨습니다.</div>
+            <a class="btn btn-defalt" href="{% url 'login' %}">로그인</a>
         </div>
         <div class="col-md-2"></div>
 </div>
