--- a/community/templates/community/delete.html
+++ b/community/templates/community/delete.html
@@ -13,7 +13,7 @@
         <form action="" method="post">
             {{form.as_p}}
             {% csrf_token %}
-            <input type="submit" class="btn btn-primary" value="삭제">
+            <input type="submit" class="btn btn-danger" value="삭제">
         </form>
     </div>
     <div class="col-md-2"></div>
