--- a/templates/base.html
+++ b/templates/base.html
@@ -62,4 +62,14 @@
         <script src="{% static 'js/scripts.js' %}"></script>
 
     </body>
+
+    <footer class="footer" role="contentinfo">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-6">
+              <p class="mb-1">&copy; 순천향대학교  |  컴퓨터공학과  |  김영찬  |  010 3550 2259</p>
+          </div>
+        </div>
+      </footer>
+
 </html>
