--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,9 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-6">
-              <p class="mb-1">&copy; 순천향대학교  |  컴퓨터공학과  |  김영찬  |  010 3550 2259</p>
+              <p class="mb-1">&copy; 순천향대학교  |  컴퓨터공학과  |  김영찬  |  </p>
+              <p>E-mail rmawkxkq0909@naver.com | rmawkxkq3550@gmail.com</p>
+              <p>Tel    010 3550 2259</p>
           </div>
         </div>
       </footer>
